--- a/static/style.css
+++ b/static/style.css
@@ -15,13 +15,27 @@
     width: 250px;
 }
 
-#content, #output {
+#unencrypted, #encrypted {
     resize: none;
     padding-left: 0.8em;
     height: calc(100% - 15px);
 }
 
-.content, .output {
+.unencrypted, .encrypted {
     width: calc(50% - 125px);
     padding: 0 15px;
+}
+
+#unencrypted:focus {
+    border-color: #28a745;
+    box-shadow: 0 0 0 0.2rem #c3e6cb;
+}
+
+#encrypted:focus {
+    border-color: #dc3545;
+    box-shadow: 0 0 0 0.2rem #f5c6cb;
+}
+
+body.wait, body.wait * {
+    cursor: wait !important;
 }
