--- a/static/style.css
+++ b/static/style.css
@@ -13,6 +13,7 @@
 
 .btnbar {
     width: 250px;
+    padding-top: 3rem;
 }
 
 #unencrypted, #encrypted {
@@ -36,6 +37,69 @@
     box-shadow: 0 0 0 0.2rem #f5c6cb;
 }
 
+.vertical {
+    display: none;
+}
+
 body.wait, body.wait * {
     cursor: wait !important;
+}
+
+@media (max-width: 900px) {
+    .navbar {
+        height: auto;
+    }
+
+    .container-fluid {
+        height: auto;
+    }
+
+    .btnbar {
+        width: 100%;
+        padding: 1rem 15px;
+    }
+
+    .button-group {
+        display: inline-grid;
+        width: 250px;
+    }
+
+    .btn-block+.btn-block {
+        margin: 0;
+    }
+
+    .main {
+        display: flex;
+        padding-bottom: 10px;
+    }
+
+    #encrypt {
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+    }
+
+    #decrypt {
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+    }
+
+    .copy {
+        display: none;
+    }
+
+    .unencrypted, .encrypted {
+        width: 100%;
+    }
+
+    #unencrypted, #encrypted {
+        height: 30vh;
+    }
+
+    .horizontal {
+        display: none;
+    }
+    
+    .vertical {
+        display: inline;
+    }
 }
