Change webapp title name

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <meta name='keywords' content='HTML, CSS, Python, JavaScript, jQuery, Bootstrap, Flask, JSON'>
     <meta name='author' content='Sunshine'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <title>Text Encryption</title>
+    <title>Simple Text Encryption</title>
     <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <link href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css' rel='stylesheet'>
@@ -97,7 +97,7 @@
 
 <body>
     <header class='navbar navbar-expand navbar-light flex-column flex-md-row'>
-        <a class='navbar-brand text-primary m-0 mr-md-3' href='/' style='font-size:24px;'>Text Encryption</a>
+        <a class='navbar-brand text-primary m-0 mr-md-3' href='/'>Simple Text Encryption</a>
     </header>
     <div class='container-fluid'>
         <div class='row'>
