--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,10 @@
     height: 80px;
 }
 
+.navbar-brand {
+    font-size: 24px;
+}
+
 .container-fluid {
     position: fixed;
     height: calc(100% - 80px);
