Add Online Version option

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset='utf-8'>
-    <meta name='description' content='Encryption'>
+    <meta name='description' content='Simple Text Encryption'>
     <meta name='keywords' content='HTML, CSS, Python, JavaScript, jQuery, Bootstrap, Flask, JSON'>
     <meta name='author' content='Sunshine'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
@@ -16,66 +16,71 @@
     <link rel='stylesheet' href="{{ url_for('static', filename='style.css') }}">
 
     <script>
-        $(function() {
-            $('#encrypt').click(function() {
+        $(function () {
+            $('#encrypt').click(function () {
                 if ($('#unencrypted').val() == '') {
                     alert('Empty unencrypted text!');
                     return false;
-                }
-                waiting();
-                try {
-                    encrypt();
-                } catch (e) {
-                    alert('Error!\n\n' + e.message);
                 };
-                waiting(false);
-                return
-                $.post('do', {
-                    mode: 'encrypt',
-                    key: $('#key').val(),
-                    content: $('#unencrypted').val(),
-                }, function(data) {
-                    if (data.result != null) {
-                        $('#encrypted').val(data.result);
-                    } else {
-                        alert('Unknow error!');
+                if ($('#online').prop('checked')) {
+                    $.post('do', {
+                        mode: 'encrypt',
+                        key: $('#key').val(),
+                        content: $('#unencrypted').val(),
+                    }, function (data) {
+                        if (data.result != null) {
+                            $('#encrypted').val(data.result);
+                        } else {
+                            alert('Unknow error!');
+                        };
+                    }, 'json').fail(function () {
+                        alert('Network error!');
+                    }).always(function () {
+                        waiting(false);
+                    });
+                } else {
+                    waiting();
+                    try {
+                        encrypt();
+                    } catch (e) {
+                        alert('Error!\n\n' + e.message);
                     };
-                }, 'json').fail(function (){
-                    alert('Network error!');
-                }).always(function() {
                     waiting(false);
-                });
+                };
+
             });
-            $('#decrypt').click(function() {
+            $('#decrypt').click(function () {
                 if ($('#encrypted').val() == '') {
                     alert('Empty encrypted text!');
                     return false;
-                }
-                waiting();
-                try {
-                    decrypt();
-                } catch (e) {
-                    alert('Incorrect key or malformed encrypted text!\n\n' + e.message);
-                };                
-                waiting(false);
-                return
-                $.post('do', {
-                    mode: 'decrypt',
-                    key: $('#key').val(),
-                    content: $('#encrypted').val(),
-                }, function(data) {
-                    if (data.result != null) {
-                        $('#unencrypted').val(data.result);
-                    } else {
-                        alert('Incorrect key or malformed encrypted text!');
+                };
+                if ($('#online').prop('checked')) {
+                    $.post('do', {
+                        mode: 'decrypt',
+                        key: $('#key').val(),
+                        content: $('#encrypted').val(),
+                    }, function (data) {
+                        if (data.result != null) {
+                            $('#unencrypted').val(data.result);
+                        } else {
+                            alert('Incorrect key or malformed encrypted text!');
+                        };
+                    }, 'json').fail(function () {
+                        alert('Network error!');
+                    }).always(function () {
+                        waiting(false);
+                    });
+                } else {
+                    waiting();
+                    try {
+                        decrypt();
+                    } catch (e) {
+                        alert('Incorrect key or malformed encrypted text!\n\n' + e.message);
                     };
-                }, 'json').fail(function (){
-                    alert('Network error!');
-                }).always(function() {
                     waiting(false);
-                });
+                };
             });
-            $('#show').change(function() {
+            $('#show').change(function () {
                 if ($('#key').attr('type') == 'password') {
                     $('#key').attr('type', 'text');
                 } else {
@@ -89,6 +94,10 @@
 <body>
     <header class='navbar navbar-expand navbar-light flex-column flex-md-row'>
         <a class='navbar-brand text-primary m-0 mr-md-3' href='/'>Simple Text Encryption</a>
+        <div class='custom-control custom-switch'>
+            <input type='checkbox' class='custom-control-input' id='online'>
+            <label class='custom-control-label' for='online'>Online Version</label>
+        </div>
     </header>
     <div class='container-fluid'>
         <div class='row'>
@@ -145,4 +154,3 @@
 </body>
 
 </html>
-
