--- a/static/style.css
+++ b/static/style.css
@@ -46,6 +46,14 @@
     display: none;
 }
 
+.icon {
+    font-family: 'Material Icons';
+    font-style: normal;
+    font-size: 18px;
+    line-height: 1;
+    vertical-align: middle;
+}
+
 body.wait, body.wait * {
     cursor: wait !important;
 }
