Focus back on copy button after press copy to clipboard

--- a/templates/index.html
+++ b/templates/index.html
@@ -132,7 +132,7 @@
                 </div>
                 <div class='button-group copy'>
                     <br>
-                    <button onclick='Copy()' type='button' class='btn btn-primary btn-block'>Copy to clipboard</button>
+                    <button onclick='Copy()' type='button' class='btn btn-primary btn-block' id='copy'>Copy to clipboard</button>
                     <div class='d-flex justify-content-around'>
                         <div class='custom-control custom-radio custom-control-inline'>
                             <input class='custom-control-input' type='radio' id='text1' name='text' value='unencrypted'>
